update messages.unread api and spec.
